# yayo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.org  TODO.org  bitboard.cpp  bitboard.h  bitboard.hpp  board.cpp  board.h  board.hpp  defs.h  defs.hpp  eval.cpp  eval.h  eval.hpp  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  movegen.hpp  random.h  search.h  thread.cpp  thread.h  thread.hpp  tt.cpp  tt.h  tt.hpp  uci.cpp  uci.h  util.h  util.hpp  zobrist.h
src/: CMakeLists.txt  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  defs.hpp  eval.cpp  eval.hpp  hashtable.cpp  hashtable.hpp  main.cpp  move.cpp  move.hpp  movegen.cpp  movegen.hpp  random.h  thread.cpp  thread.hpp  tt.cpp  tt.hpp  tuned.hpp  tuner.cpp  tuner.hpp  uci.cpp  uci.hpp  util.hpp  weights.hpp
tests/: main.cpp  tests.epd  tests.h
